# JImageHash.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml  setup.cfg
JImageHash/: JImageHash.py  Kernel.py  __init__.py  ji.py
JImageHash/hashers/: AverageKernelHash.py  DifferenceHash.py  __init__.py
patches/: JLargeArrays_OpenJDK17_patch.patch  JLargeArrays_rename_back.patch
tests/: tests.py
